--- a/src/Site/MainBundle/Resources/translations/menu.ru.yml
+++ b/src/Site/MainBundle/Resources/translations/menu.ru.yml
@@ -62,6 +62,7 @@ backend:
         station: Вокзал
         time: Время прибытия
         registerDate: День регистрации
+        friends: С кем из сотрудников компании «Ракурс» вы бы хотели пообщаться в ходе конференции
         not_found: Нет такой регистрации
 
     stations:
