--- a/src/Site/MainBundle/Resources/translations/menu.ru.yml
+++ b/src/Site/MainBundle/Resources/translations/menu.ru.yml
@@ -69,6 +69,7 @@ backend:
         time: Время прибытия
         registerDate: День регистрации
         friends: С кем из сотрудников компании «Ракурс» вы бы хотели пообщаться в ходе конференции
+        export: Экспорт в excel
         not_found: Нет такой регистрации
 
     stations:
