Add remember message

--- a/src/Site/MainBundle/Resources/translations/menu.ru.yml
+++ b/src/Site/MainBundle/Resources/translations/menu.ru.yml
@@ -68,6 +68,8 @@ backend:
         station: Вокзал
         time: Время прибытия
         registerDate: День регистрации
+        flagRemember2: Напоминание за 2 недели
+        flagRemember: Напоминание за 1 неделю
         friends: С кем из сотрудников компании «Ракурс» вы бы хотели пообщаться в ходе конференции
         export: Экспорт в excel
         not_found: Нет такой регистрации
